--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^22.14.1",
     "typescript": "^5.8.3",
     "vitest": "^3.1.2"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13"
   }
 }
